--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
             <div class="options">
               <div class="label">
                 <span>Live feed</span>
+                <!-- Arrow -->
+                <div class="arrow">
+                  <svg
+                    stroke="currentColor"
+                    fill="currentColor"
+                    stroke-width="0"
+                    viewBox="0 0 512 512"
+                    height="1em"
+                    width="1em"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M256 294.1L383 167c9.4-9.4 24.6-9.4 33.9 0s9.3 24.6 0 34L273 345c-9.1 9.1-23.7 9.3-33.1.7L95 201.1c-4.7-4.7-7-10.9-7-17s2.3-12.3 7-17c9.4-9.4 24.6-9.4 33.9 0l127.1 127z"
+                    ></path>
+                  </svg>
+                </div>
               </div>
               <!-- Options -->
               <ul class="option heightwidth">
@@ -61,6 +77,22 @@
             <div class="options">
               <div class="label">
                 <span>Portfolio Management</span>
+                <!-- Arrow -->
+                <div class="arrow">
+                  <svg
+                    stroke="currentColor"
+                    fill="currentColor"
+                    stroke-width="0"
+                    viewBox="0 0 512 512"
+                    height="1em"
+                    width="1em"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M256 294.1L383 167c9.4-9.4 24.6-9.4 33.9 0s9.3 24.6 0 34L273 345c-9.1 9.1-23.7 9.3-33.1.7L95 201.1c-4.7-4.7-7-10.9-7-17s2.3-12.3 7-17c9.4-9.4 24.6-9.4 33.9 0l127.1 127z"
+                    ></path>
+                  </svg>
+                </div>
               </div>
               <!-- Options -->
               <ul class="option heightwidth">
@@ -82,6 +114,22 @@
             <div class="options">
               <div class="label">
                 <span>Opportunities Scanner</span>
+                <!-- Arrow -->
+                <div class="arrow">
+                  <svg
+                    stroke="currentColor"
+                    fill="currentColor"
+                    stroke-width="0"
+                    viewBox="0 0 512 512"
+                    height="1em"
+                    width="1em"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M256 294.1L383 167c9.4-9.4 24.6-9.4 33.9 0s9.3 24.6 0 34L273 345c-9.1 9.1-23.7 9.3-33.1.7L95 201.1c-4.7-4.7-7-10.9-7-17s2.3-12.3 7-17c9.4-9.4 24.6-9.4 33.9 0l127.1 127z"
+                    ></path>
+                  </svg>
+                </div>
               </div>
               <!-- Options -->
               <ul class="option heightwidth">
@@ -137,7 +185,7 @@
                 <h1>Live feed</h1>
               </div>
               <!-- Paras -->
-              <div class="paras mt-21">
+              <div class="paras mt-24">
                 <p>
                   Get the latest investment ideas and trading opportunities in
                   real-time with our algorithmically selected top-rated
@@ -160,7 +208,7 @@
           </section>
           <!-- ANALYST -->
           <section id="analyst" class="analyst">
-            <div class="heading mt-21">
+            <div class="heading mt-24">
               <h2>Analyst Ratings</h2>
             </div>
 
@@ -360,10 +408,10 @@
             <!-- Top Content -->
             <div class="top-content">
               <div class="heading">
-                <h1>Overview</h1>
+                <h1>Portfolio Management</h1>
               </div>
               <!-- Paras -->
-              <div class="paras mt-21">
+              <div class="paras mt-24">
                 <p>
                   Our Portfolio Management Tool is designed to provide you with
                   a comprehensive solution to track and manage your market
@@ -609,20 +657,20 @@
                 <div class="img-content">
                   <ol class="spans">
                     <li>
-                      <span>1. ASSETS UNDER MANAGEMENT </span>
+                      <span> ASSETS UNDER MANAGEMENT </span>
                       - providing you with total P&L in USD and %
                     </li>
                     <li>
-                      <span>2. TOTAL LONG POSITIONS</span>
+                      <span>TOTAL LONG POSITIONS</span>
                       - providing you with long (buy) positions P&L in USD and %
                     </li>
                     <li>
-                      <span>3. TOTAL SHORT POSITIONS</span>
+                      <span>TOTAL SHORT POSITIONS</span>
                       - providing you with short (sell) positions P&L in USD and
                       %
                     </li>
                     <li>
-                      <span>4. TOTAL CASH</span>
+                      <span>TOTAL CASH</span>
                       - providing you with total available cash and unit price
                     </li>
                   </ol>
@@ -843,7 +891,7 @@
               </div>
               <!-- item -->
               <div class="item">
-                <div class="heading mt-21">
+                <div class="heading mt-24">
                   <h2>Other Monitoring Events</h2>
                 </div>
 
@@ -1044,7 +1092,7 @@
                         </li>
                       </ol>
 
-                      <p class="mt-21">
+                      <p class="mt-24">
                         Please remember that closing a position involves selling
                         or liquidating the investment, thereby removing it from
                         your portfolio. It is crucial to carefully evaluate and
@@ -1067,7 +1115,7 @@
                     <div class="action-content">
                       <div class="head">
                         <span>"Delete Position" option:</span>
-                        <p class="mb-21">
+                        <p class="mb-24">
                           The "Delete Position" option allows you to remove a
                           specific investment position from your portfolio.
                           Please follow these steps to delete a position:
@@ -1132,9 +1180,9 @@
                     </div>
                     <!-- content -->
                     <div class="action-content">
-                      <div class="heading mt-21">
+                      <div class="heading mt-24">
                         <span>"Edit Position" option:</span>
-                        <p class="mb-21">
+                        <p class="mb-24">
                           The "Edit Position" option allows you to modify the
                           details of a specific investment position within your
                           portfolio. Follow these steps to edit a position:
@@ -1172,7 +1220,7 @@
                     <div class="action-content">
                       <ul>
                         <p>Here are some details you can typically edit:</p>
-                        <li class="mt-21">
+                        <li class="mt-24">
                           <span class="p-bold">Entry Date:</span>
                           Modify the entry date of the position if you need to
                           reflect the accurate date of when the investment was
@@ -1199,10 +1247,10 @@
                     <!-- content -->
                     <div class="action-content">
                       <ul>
-                        <p class="mt-40f mt-21">
+                        <p class="mt-40f mt-24">
                           It's important to note a few considerations:
                         </p>
-                        <li class="mt-21">
+                        <li class="mt-24">
                           The ability to edit a position may depend on the
                           specific features and capabilities of your portfolio.
                         </li>
@@ -1238,7 +1286,7 @@
 
                     <!-- content -->
                     <div class="action-content">
-                      <div class="heading mt-21">
+                      <div class="heading mt-24">
                         <span>Compare to Benchmark:</span>
                         <p class="">
                           The "Compare to Benchmark" option allows you to
@@ -1255,11 +1303,11 @@
 
                       <!-- list -->
                       <ol>
-                        <p class="mt-21">
+                        <p class="mt-24">
                           To use the "Compare to Benchmark" option, follow these
                           steps:
                         </p>
-                        <li class="mt-21">
+                        <li class="mt-24">
                           Identify the investment position within your portfolio
                           that you wish to compare to the benchmark.
                         </li>
@@ -1376,7 +1424,7 @@
             <div class="top-content">
               <div class="heading">
                 <h1>Opportunities Scanner</h1>
-                <div class="mt-21">
+                <div class="mt-24">
                   <p>
                     The Opportunity Scanner is a powerful and dynamic tool
                     within the Tipigo Insight platform designed to help you
@@ -1389,7 +1437,7 @@
                     timely investment decisions.
                   </p>
 
-                  <p class="mb-21 mt-16">
+                  <p class="mb-24 mt-18">
                     Knowing when and how to use the Opportunity Scanner is
                     essential for harnessing its full potential. Here are some
                     scenarios where the Opportunity Scanner can be particularly
@@ -1487,7 +1535,7 @@
           </section>
           <!-- Step 1: Customize Your Scan -->
           <section id="customize-scan" class="customize-scan">
-            <div class="heading mt-21">
+            <div class="heading mt-24">
               <h2>Step 1: Customize Your Scan</h2>
               <p>
                 To get started, simply select the number of stocks you wish to
@@ -1506,7 +1554,7 @@
             <div id="advc-seting" class="advc-seting">
               <div class="heading">
                 <h3>Advanced Settings</h3>
-                <p class="mb-21">
+                <p class="mb-24">
                   More advanced users will find it useful to access additional
                   settings that allow for further customization of the
                   Opportunity Scanner. By leveraging these advanced settings,
@@ -1569,7 +1617,7 @@
               </p>
             </div>
             <!-- order list -->
-            <ol class="mt-21">
+            <ol class="mt-24">
               <li>
                 <p>
                   <span class="p-bold">Fetching Symbol Data: </span>The scanner
@@ -1637,7 +1685,7 @@
               </p>
             </div>
             <!-- order list -->
-            <ol class="mt-21">
+            <ol class="mt-24">
               <li>
                 <p>
                   Select All or Individual Stocks: You have the option to select
@@ -1700,7 +1748,7 @@
                   </li>
                 </ul>
               </div>
-              <li class="mt-21">
+              <li class="mt-24">
                 <p>
                   Access Back test Data: For a more thorough assessment, you can
                   view the back test data at the bottom of the screen. This data
@@ -1743,7 +1791,7 @@
                 simple steps to seamlessly integrate the selected positions into
                 your portfolio:
               </p>
-              <p class="mt-21">
+              <p class="mt-24">
                 Select Symbols: Use the checkbox next to each symbol to mark the
                 stocks you want to include in your portfolio. You have the
                 flexibility to choose all the stocks or only specific ones based
@@ -1792,7 +1840,7 @@
 
           <!-- End of the Flow -->
           <section id="end-flow" class="end-flow">
-            <div class="heading mt-21">
+            <div class="heading mt-24">
               <h2>End of the Flow</h2>
               <p>
                 You have successfully added the selected positions to your
