--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 <!-- Arrow -->
                 <div class="arrow">
                   <svg
+                    class="rotate"
                     stroke="currentColor"
                     fill="currentColor"
                     stroke-width="0"
@@ -95,7 +96,7 @@
                 </div>
               </div>
               <!-- Options -->
-              <ul class="option heightwidth">
+              <ul class="option">
                 <li>
                   <a class="portfolio" href="#portfolio">Create a portfolio </a>
                 </li>
@@ -117,6 +118,7 @@
                 <!-- Arrow -->
                 <div class="arrow">
                   <svg
+                    class="rotate"
                     stroke="currentColor"
                     fill="currentColor"
                     stroke-width="0"
@@ -132,7 +134,7 @@
                 </div>
               </div>
               <!-- Options -->
-              <ul class="option heightwidth">
+              <ul class="option">
                 <li>
                   <a class="opportunites-overview" href="#opportunites-overview"
                     >Overview</a
@@ -437,7 +439,7 @@
                     name="support"
                   ></textarea>
 
-                  <button onclick="msgSent(event)">Send</button>
+                  <button onclick="msgSent(event, 0)">Send</button>
                 </div>
               </form>
 
@@ -1507,7 +1509,7 @@
                     name="support"
                   ></textarea>
 
-                  <button onclick="msgSent(event)">Send</button>
+                  <button onclick="msgSent(event, 1)">Send</button>
                 </div>
               </form>
 
@@ -2037,7 +2039,7 @@
                     name="support"
                   ></textarea>
 
-                  <button onclick="msgSent(event)">Send</button>
+                  <button onclick="msgSent(event,2)">Send</button>
                 </div>
               </form>
 
